# EvaliQ

./: .gitignore  CMakeLists.txt  main.cpp  res.qrc
enums/: enums.h
json/: jsonfilereader.cpp  jsonfilereader.h  questions.json
makers/: candidatemaker.h  questionmaker.cpp  questionmaker.h
models/: candidate.h  question.h
models/makers/: candidatemaker.cpp  candidatemaker.h  questionmaker.h
qml/: QuestionView.qml  questionarie.qml  questionnaire.qml
sql/: Candidate.sql  Question.sql  sqlserverconnection.cpp  sqlserverconnection.h
views/: mainwindow.cpp  mainwindow.h  mainwindow.ui  savecandidatedialog.cpp  savecandidatedialog.h  savecandidatedialog.ui
